--- a/src/main/resources/com/cgvsu/fxml/gui.fxml
+++ b/src/main/resources/com/cgvsu/fxml/gui.fxml
@@ -4,8 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.input.KeyCodeCombination?>
+<?import java.net.URL?>
 
 <AnchorPane fx:id="anchorPane" xmlns:fx="http://javafx.com/fxml" fx:controller="com.cgvsu.GuiController">
+    <stylesheets>
+        <URL value="@style.css" />
+    </stylesheets>
+
     <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <Menu mnemonicParsing="false" text="File">
             <MenuItem mnemonicParsing="false" onAction="#onOpenModelMenuItemClick" text="Load Model">
@@ -37,106 +42,27 @@
         </Menu>
 
         <Menu mnemonicParsing="false" text="Model Operations">
-            <MenuItem mnemonicParsing="false" onAction="#onTriangulateModelMenuItemClick" text="Triangulate Model">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="T"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onComputeNormalsMenuItemClick" text="Compute Normals">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="N"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onShowTransformPanel" text="Show Transform Panel">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="T"/>
-                </accelerator>
-            </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onTriangulateModelMenuItemClick" text="Triangulate Model"/>
+            <MenuItem mnemonicParsing="false" onAction="#onComputeNormalsMenuItemClick" text="Compute Normals"/>
+            <MenuItem mnemonicParsing="false" onAction="#onShowTransformPanel" text="Show Transform Panel"/>
         </Menu>
 
         <Menu mnemonicParsing="false" text="Camera Options">
-            <MenuItem mnemonicParsing="false" onAction="#onAddCameraMenuItemClick" text="Add New Camera">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="N"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onNextCameraMenuItemClick" text="Next Camera">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="TAB"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onDeleteCameraMenuItemClick" text="Delete Current Camera">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="DELETE"/>
-                </accelerator>
-            </MenuItem>
-
-            <SeparatorMenuItem/>
-
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraForward" text="Forward (Z-)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="UP"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraBackward" text="Backward (Z+)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="DOWN"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraLeft" text="Left (X+)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="LEFT"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraRight" text="Right (X-)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="RIGHT"/>
-                </accelerator>
-            </MenuItem>
-
-            <SeparatorMenuItem/>
-
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraUp" text="Up (W)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="W"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#handleCameraDown" text="Down (S)">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="UP" meta="UP" shift="UP" shortcut="UP" code="S"/>
-                </accelerator>
-            </MenuItem>
+            <MenuItem mnemonicParsing="false" onAction="#onAddCameraMenuItemClick" text="Add New Camera"/>
+            <MenuItem mnemonicParsing="false" onAction="#onNextCameraMenuItemClick" text="Next Camera"/>
+            <MenuItem mnemonicParsing="false" onAction="#onDeleteCameraMenuItemClick" text="Delete Current Camera"/>
         </Menu>
+
         <Menu mnemonicParsing="false" text="Light Options">
-            <MenuItem mnemonicParsing="false" onAction="#onAddPointLightClick" text="Random Point Light" />
-            <MenuItem mnemonicParsing="false" onAction="#onAddLightAtCameraClick" text="Light at Camera Pos">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="P"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onClearLightsClick" text="Clear All Lights" />
+            <MenuItem mnemonicParsing="false" onAction="#onAddPointLightClick" text="Random Point Light"/>
+            <MenuItem mnemonicParsing="false" onAction="#onAddLightAtCameraClick" text="Light at Camera Pos"/>
+            <MenuItem mnemonicParsing="false" onAction="#onClearLightsClick" text="Clear All Lights"/>
         </Menu>
 
         <Menu mnemonicParsing="false" text="Render Options">
-            <CheckMenuItem fx:id="drawGridCheck" mnemonicParsing="false" text="Draw Mesh Grid" />
-            <CheckMenuItem fx:id="useTextureCheck" mnemonicParsing="false" text="Use Texture" />
-            <CheckMenuItem fx:id="useLightingCheck" mnemonicParsing="false" text="Enable Lighting" selected="true">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="L"/>
-                </accelerator>
-            </CheckMenuItem>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Model Selection">
-            <MenuItem mnemonicParsing="false" onAction="#onNextModelMenuItemClick" text="Next Model">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="RIGHT"/>
-                </accelerator>
-            </MenuItem>
-            <MenuItem mnemonicParsing="false" onAction="#onPrevModelMenuItemClick" text="Previous Model">
-                <accelerator>
-                    <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="LEFT"/>
-                </accelerator>
-            </MenuItem>
+            <CheckMenuItem fx:id="drawGridCheck" mnemonicParsing="false" text="Draw Mesh Grid"/>
+            <CheckMenuItem fx:id="useTextureCheck" mnemonicParsing="false" text="Use Texture"/>
+            <CheckMenuItem fx:id="useLightingCheck" mnemonicParsing="false" text="Enable Lighting" selected="true"/>
         </Menu>
     </MenuBar>
 
@@ -157,7 +83,10 @@
         <VBox spacing="5">
             <Label text="Loaded Models:"/>
             <ListView fx:id="modelListView" prefHeight="150.0"/>
-            <Button text="Delete Selected Model" onAction="#onRemoveModelClick" prefWidth="280" style="-fx-background-color: #ffcccc;"/>
+            <Button text="Delete Selected Model"
+                    onAction="#onRemoveModelClick"
+                    prefWidth="280"
+                    styleClass="delete-button" />
         </VBox>
 
         <Separator/>
@@ -167,55 +96,45 @@
         <VBox spacing="5">
             <Label text="Translation"/>
             <HBox spacing="5">
-                <Label text="X:" prefWidth="30"/>
-                <TextField fx:id="translateX" text="0" prefWidth="70"/>
+                <Label text="X:" prefWidth="30"/><TextField fx:id="translateX" text="0" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Y:" prefWidth="30"/>
-                <TextField fx:id="translateY" text="0" prefWidth="70"/>
+                <Label text="Y:" prefWidth="30"/><TextField fx:id="translateY" text="0" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Z:" prefWidth="30"/>
-                <TextField fx:id="translateZ" text="0" prefWidth="70"/>
+                <Label text="Z:" prefWidth="30"/><TextField fx:id="translateZ" text="0" prefWidth="70"/>
             </HBox>
         </VBox>
 
         <VBox spacing="5">
             <Label text="Rotation (degrees)"/>
             <HBox spacing="5">
-                <Label text="X:" prefWidth="30"/>
-                <TextField fx:id="rotateX" text="0" prefWidth="70"/>
+                <Label text="X:" prefWidth="30"/><TextField fx:id="rotateX" text="0" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Y:" prefWidth="30"/>
-                <TextField fx:id="rotateY" text="0" prefWidth="70"/>
+                <Label text="Y:" prefWidth="30"/><TextField fx:id="rotateY" text="0" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Z:" prefWidth="30"/>
-                <TextField fx:id="rotateZ" text="0" prefWidth="70"/>
+                <Label text="Z:" prefWidth="30"/><TextField fx:id="rotateZ" text="0" prefWidth="70"/>
             </HBox>
         </VBox>
 
         <VBox spacing="5">
             <Label text="Scale"/>
             <HBox spacing="5">
-                <Label text="X:" prefWidth="30"/>
-                <TextField fx:id="scaleX" text="1" prefWidth="70"/>
+                <Label text="X:" prefWidth="30"/><TextField fx:id="scaleX" text="1" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Y:" prefWidth="30"/>
-                <TextField fx:id="scaleY" text="1" prefWidth="70"/>
+                <Label text="Y:" prefWidth="30"/><TextField fx:id="scaleY" text="1" prefWidth="70"/>
             </HBox>
             <HBox spacing="5">
-                <Label text="Z:" prefWidth="30"/>
-                <TextField fx:id="scaleZ" text="1" prefWidth="70"/>
+                <Label text="Z:" prefWidth="30"/><TextField fx:id="scaleZ" text="1" prefWidth="70"/>
             </HBox>
         </VBox>
 
         <Button text="Apply transformation" onAction="#onApplyTransformation" prefWidth="280"/>
         <HBox spacing="5" prefWidth="280" alignment="CENTER_LEFT">
-            <CheckBox fx:id="randomTransformationCheck" text="Random transformation"
-                      onAction="#onRandomTransformationCheckClicked"/>
+            <CheckBox fx:id="randomTransformationCheck" text="Random transformation" onAction="#onRandomTransformationCheckClicked"/>
         </HBox>
         <Button text="Undo the transformation" onAction="#onOriginalModel" prefWidth="280"/>
         <Button text="Hide Panel" onAction="#onHideTransformPanel" prefWidth="280"/>
